--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "homepage": "https://www.aliyun.com/product/pls",
     "authors": [
         {
-            "name": "huanjutang",
+            "name": "Huanjutang",
             "homepage": "https://www.aliyun.com"
         }
     ],
